# DataStruct

./: .gitignore  CMakeLists.txt  README.md  test.c
introduction/: execise1_19.c  exercise1_1.md  exercise1_16.c  exercise1_17.c  exercise1_18.c  exercise1_2.md  exercise1_20.c  exercise1_4.c
linear_table/: LinearList.h  LinkedList.h  linear_table.c  linear_table_main.c  linked_list.c  linked_list_main.c
